--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -11,6 +11,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  slug       :string           not null
+#  img_url    :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
