--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "recharts": "^1.0.0-alpha.1",
     "redux": "^3.7.0",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.0.0"
