--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "test": "test"
   },
   "scripts": {
-    "webpack": "webpack --config webpack.config.dev.js --watch"
+    "webpack": "webpack --config webpack.config.dev.js --watch",
+    "postinstall": "webpack --config webpack.config.prod.js"
+  },
+  "engines": {
+    "node": "8.1.2",
+    "npm": "5.1.0"
   },
   "author": "PGilbertSchmitt@gmail.com",
   "license": "MIT"
