--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "webpack": "webpack --config webpack.config.dev.js --watch",
-    "postinstall": "webpack --config webpack.config.prod.js"
+    "heroku-postbuild": "webpack -p --config ./webpack.config.prod.js --progress"
   },
   "engines": {
     "node": "8.1.2",
